Perhaps the first legitimate use of git yet, a fully functioning program. Make dict out of output header in plotOutput and stitch plots into movie (requires updated matplotlib and video codecs)

--- a/.gitignore
+++ b/.gitignore
@@ -15,5 +15,15 @@
 .#*
 *#
 *~
+#"compiled" python
+*.pyc
 #executable
 prefAttachModel
+#png of plots
+*.png
+#.txt from plotOutput
+*.txt
+#csv output
+*.csv
+#avi files
+*.avi
