added embedding capabilities/main file, which required the pulling in of many other files (dmaps, eigen_solvers, etc.), also changed some older things but have since forgotten what these adjustments were

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@
 pref_attach
 prefAttachModel
 coarse_ng
+graph_embedding
 #png of plots
 *.png
 #.txt from plotOutput
@@ -46,3 +47,4 @@ test.cc
 .depend
 err
 SPECIAL_DATA
+*pa_run_data
