--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ pref_attach
 prefAttachModel
 coarse_ng
 graph_embedding
+rho_kappa_embedding
 #png of plots
 *.png
 #.txt from plotOutput
@@ -48,3 +49,4 @@ test.cc
 err
 *SPECIAL_DATA
 *pa_run_data
+/BEST_CPI_DATA/
